[tool.poetry]
name = "dqn"
version = "0.1.0"
description = ""
authors = ["Gleb Nikiforov <gleb.nikiforov@semrush.com>"]

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.0.0"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
torch = {url = "http://download.pytorch.org/whl/cpu/torch-1.12.1-cp310-none-macosx_10_9_x86_64.whl"}
pip = "^22.2.2"
install = "^1.3.5"
AutoROM = {extras = ["accept-rom-license"], version = "^0.4.2"}
gym = {extras = ["atari"], version = "^0.25.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
