[tool.poetry]
name = "dqn"
version = "0.1.0"
description = ""
authors = ["Gleb Nikiforov <gleb.nikiforov@semrush.com>"]

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.0.0"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
torch = {url = "http://download.pytorch.org/whl/cpu/torch-1.12.1-cp310-none-macosx_10_9_x86_64.whl"}
pip = "^22.2.2"
install = "^1.3.5"
AutoROM = {extras = ["accept-rom-license"], version = "^0.4.2"}
gym = {extras = ["atari"], version = "^0.25.1"}

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"
mypy = "^0.942"
mypy-extensions = "^0.4.3"
pylint = "~2.13.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
