[tool.poetry]
name = "dqn"
version = "0.1.0"
description = ""
authors = ["Gleb Nikiforov <gleb.nikiforov@semrush.com>"]

[tool.poetry.dependencies]
python = "~3.7"
jupyter = "^1.0.0"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
torch = {url = "http://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-linux_x86_64.whl"}
#torch = {url = "http://download.pytorch.org/whl/cpu/torch-1.12.1-cp37-none-macosx_10_9_x86_64.whl"}
pip = "^22.2.2"
install = "^1.3.5"
AutoROM = {extras = ["accept-rom-license"], version = "^0.4.2"}
gym = {extras = ["atari"], version = "^0.25.1"}

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
mypy = "^0.942"
mypy-extensions = "^0.4.3"
pylint = "~2.13.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
